--- a/pertemuan 6/tugas/css/color2.css
+++ b/pertemuan 6/tugas/css/color2.css
@@ -1,6 +1,7 @@
 .rows {
     display: flex;
     flex-direction: row;
+    gap: 10px;
 }
 
 .yellow {
@@ -8,17 +9,13 @@
     height: 40px;
     border: 1px solid black;
     background-color: yellow;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-bottom: 10px;
 }
 
 .orange {
     width: 85%;
     height: 40px;
     border: 1px solid black;
-    margin-left: 20px;
-    margin-top: 10px;
-    margin-right: 10px;
     background-color: darkorange;
 }
 
@@ -27,8 +24,7 @@
     width: 15%;
     height: 500px;
     border: 1px solid black;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-bottom: 10px;
     background-color: lightgreen;
 }
 
@@ -36,8 +32,6 @@
     width: 70%;
     height: 500px;
     border: 1px solid black;
-    margin-left: 20px;
-    margin-top: 10px;
     background-color: lavender;
 }
 
@@ -45,9 +39,6 @@
     width: 15%;
     height: 500px;
     border: 1px solid black;
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 10px;
     background-color: skyblue;
 }
 
@@ -55,7 +46,4 @@
     height: 40px;
     border: 0.5px solid black;
     background-color: blue;
-    margin-right: 10px;
-    margin-left: 10px;
-    margin-top: 10px;
 }
